<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name of the application. [CHAR LIMIT=35] -->
    <string name="app_label">Input Devices</string>

    <!-- Keyboard layouts label, used to describe the set of all built-in layouts in the UI. [CHAR LIMIT=35] -->
    <string name="keyboard_layouts_label">Milestone 2 keyboard</string>

    <!-- AZERTY keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_azerty_label"></add-resource>
    <string name="keyboard_layout_azerty_label">AZERTY</string>

    <!-- QWERTY-UK keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_qwerty_uk_label"></add-resource>
    <string name="keyboard_layout_qwerty_uk_label">QWERTY-UK</string>
    
    <!-- QWERTY-US keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_qwerty_us_label"></add-resource>
    <string name="keyboard_layout_qwerty_us_label">QWERTY-US</string>

    <!-- QWERTY-polish keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_qwerty_pl_label"></add-resource>
    <string name="keyboard_layout_qwerty_pl_label">QWERTY-polish</string>

    <!-- QWERTZ keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_qwertz_label"></add-resource>
    <string name="keyboard_layout_qwertz_label">QWERTZ</string>
    
    <!-- Hebrew keyboard layout label. [CHAR LIMIT=35] -->
    <add-resource type="string" name="keyboard_layout_hebrew_label"></add-resource>
    <string name="keyboard_layout_hebrew_label">Hebrew</string>
</resources>
